More theory + some code

--- a/linear_programming.ipynb
+++ b/linear_programming.ipynb
@@ -78,7 +78,90 @@
    "source": [
     "## Linear programming solution methods\n",
     "\n",
-    "**TODO**"
+    "### Simplex method:\n",
+    "\n",
+    "Intuition: All the constraints combined form a feasible region, where the optimal solution lies. As the objective function is linear, it is component-wise monotone, and therefore the optimal solution has to exist somewhere at the border of the feasible region, more specifically - one of the vertices formed by the intersection of constraints should have this optimal value. This method is therefore \"traveling\" over the edges of the feasible region while picking the most \"profitable\" direction so as to finally reach the solution.\n",
+    "\n",
+    "Algorithm (according to provided jupiter notebooks, bold text - my notes):\n",
+    "\n",
+    "1. Initialization: Start with an initial basic feasible solution. For the optimal transport problem, this could be an initial transportation plan that satisfies all supply and demand constraints.\n",
+    "\n",
+    "2. Optimality Test: Check if the current solution is optimal by examining the reduced costs. If all reduced costs are non-negative, the current solution is optimal.\n",
+    "\n",
+    "    **At this point during every iteration, we end up with an equation $Z - (a_1x_1 - a_1x_2 + ...) + (b_1y_1 + b_2y_2 + ...) = const$. Achieving the above condition would then mean that the first bracket is empty, and further changing any variable would only decrease $Z$.**\n",
+    "\n",
+    "3. Pivot Selection: If the current solution is not optimal, select an entering variable (one with a negative reduced cost) to enter the basis. This corresponds to increasing the amount transported along a certain route.\n",
+    "\n",
+    "    **Usually the variable with largest absolute cost is chosen, as that means it will affect the value more drastically and thus optimize it quicker.**\n",
+    "\n",
+    "4. Determine Leaving Variable: Determine the leaving variable by performing a ratio test to ensure feasibility. This involves finding which variable should leave the basis to maintain the feasibility of the solution.\n",
+    "\n",
+    "    **At this step we determine which of the constraint equations has the harshest restrictions over the chosen variable, and pick it and its corresponding base variable.**\n",
+    "\n",
+    "5. Update Solution: Perform a pivot operation to update the basic feasible solution. This involves adjusting the transportation quantities and updating the basis.\n",
+    "\n",
+    "    **Carry out operations similar to that of matrix RREF transformation - make the cofficient of the corresponding variable in the chosen constraint equal to 1, then via elementary row operations make it the only non-zero element in the column.** \n",
+    "\n",
+    "Repeat: Repeat the optimality test, pivot selection, and update steps until an optimal solution is found.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import linprog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_constraints_matrix(n, m):\n",
+    "    A = np.zeros((n + m, n * m))\n",
+    "    for i in range(n):\n",
+    "        A[i, i * m:(i + 1) * m] = 1\n",
+    "    for i in range(m):\n",
+    "        A[n + i, i::m] = 1\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ot_lp_solver(cost_matrix, a, b):\n",
+    "\n",
+    "    cost_matrix = np.array(cost_matrix)\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    c = cost_matrix.flatten()\n",
+    "    A_check = get_constraints_matrix(a.size, b.size)\n",
+    "\n",
+    "    expected_check = np.concatenate((a, b))\n",
+    "\n",
+    "    result = linprog(c, A_eq=A_check, b_eq=expected_check)\n",
+    "\n",
+    "    if result.success:\n",
+    "        return result.fun\n",
+    "    else:\n",
+    "        raise ValueError(\"Optimization failed:\", result.message)\n",
+    "\n",
+    "print(ot_lp_solver([[2, 3], [5, 1]], [3, 2], [1, 4]))"
    ]
   },
   {
@@ -90,39 +173,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 2.]\n",
-      " [0. 2.]]\n"
+      "10.0\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import linprog\n",
-    "\n",
-    "def ot_lp_solver(cost_matrix, a, b):\n",
-    "\n",
+    "def ot_dual_solver(cost_matrix, a, b):\n",
     "    cost_matrix = np.array(cost_matrix)\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
     "    c = cost_matrix.flatten()\n",
-    "    A_check = np.zeros((a.size + b.size, a.size * b.size))\n",
+    "    A_check = get_constraints_matrix(a.size, b.size).transpose()\n",
     "\n",
-    "    for i in range(a.size):\n",
-    "        A_check[i, i * b.size:(i + 1) * b.size] = 1\n",
-    "    \n",
-    "    for i in range(b.size):\n",
-    "        A_check[a.size + i, i::b.size] = 1\n",
+    "    conc_result = -np.concatenate((a, b)).transpose() # negation because linprog minimizes\n",
     "\n",
-    "    expected_check = np.concatenate((a, b))\n",
-    "\n",
-    "    result = linprog(c, A_eq=A_check, b_eq=expected_check)\n",
+    "    result = linprog(conc_result, A_ub=A_check, b_ub=c)\n",
     "\n",
     "    if result.success:\n",
-    "        return result.x.reshape((a.size, b.size))\n",
+    "        return -result.fun\n",
     "    else:\n",
     "        raise ValueError(\"Optimization failed:\", result.message)\n",
     "\n",
-    "print(ot_lp_solver([[2, 3], [5, 1]], [3, 2], [1, 4]))"
+    "print(ot_dual_solver([[2, 3], [5, 1]], [3, 2], [1, 4]))"
    ]
   }
  ],
