Added manual implementation of Simplex big M method

--- a/linear_programming.ipynb
+++ b/linear_programming.ipynb
@@ -196,6 +196,77 @@
     "\n",
     "print(ot_dual_solver([[2, 3], [5, 1]], [3, 2], [1, 4]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = 9999\n",
+    "\n",
+    "def get_constraints_tableau(n, m):\n",
+    "    A = np.zeros((n + m, n * m + n + m + 1), dtype=np.float64)\n",
+    "    for i in range(n):\n",
+    "        A[i, i * m:(i + 1) * m] = 1\n",
+    "        A[i, n * m + i] = 1\n",
+    "    for i in range(m):\n",
+    "        A[n + i, i:n*m:m] = 1\n",
+    "        A[n + i, n * m + n + i] = 1\n",
+    "    return A\n",
+    "\n",
+    "\n",
+    "def manual_solver(cost_matrix, a, b):\n",
+    "    cost_matrix = np.array(cost_matrix)\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    n, m = cost_matrix.shape\n",
+    "    c = cost_matrix.flatten()\n",
+    "\n",
+    "    A = get_constraints_tableau(n, m)\n",
+    "    vals = np.concatenate((a, b))\n",
+    "    A[:, -1] = vals\n",
+    "\n",
+    "    main = np.concatenate((c,  np.array([M for _ in range(n + m)])))\n",
+    "    main = np.concatenate((main, np.array([0])), dtype=np.float64)\n",
+    "\n",
+    "    for i in range(n + m):\n",
+    "        main += -M * A[i]\n",
+    "\n",
+    "    while True:\n",
+    "\n",
+    "        no_value = main[:-1]\n",
+    "        if np.all(no_value >= 0):\n",
+    "            return -main[-1]\n",
+    "\n",
+    "        entering = np.argmin(no_value)\n",
+    "        ratios = np.zeros(n + m)\n",
+    "        for i in range(n + m):\n",
+    "            if A[i, entering] > 0:\n",
+    "                ratios[i] = A[i, -1] / A[i, entering]\n",
+    "            else:\n",
+    "                ratios[i] = np.inf\n",
+    "\n",
+    "        leaving = np.argmin(ratios)\n",
+    "        A[leaving] /= A[leaving, entering]\n",
+    "        for i in range(n + m):\n",
+    "            if i == leaving:\n",
+    "                continue\n",
+    "            A[i] -= A[i, entering] * A[leaving]\n",
+    "\n",
+    "        main -= A[leaving] * main[entering]\n",
+    "\n",
+    "\n",
+    "print(manual_solver([[2, 3], [5, 1]], [3, 2], [1, 4]))"
+   ]
   }
  ],
  "metadata": {
