--- a/dual_gradient_ascent.ipynb
+++ b/dual_gradient_ascent.ipynb
@@ -20,6 +20,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some of my notes on dual problem. Did this in preparation to my midterm. To be written in latex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Dual Notes](dual_notes.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
